fixes Bug: Fork svg color in dark mode #4312

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1016,6 +1016,11 @@ ul.popular-tags li {
     align-self: center;
 }
 
+@media (prefers-color-scheme: dark) {
+  .fork-count-svg {
+    fill: #7C8590;
+  }
+}
 @media screen and (max-width : 670px) {
   #view-mode {
     position: fixed;
